k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beroo-frontend
  labels:
    app: beroo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beroo-frontend
  template:
    metadata:
      labels:
        app: beroo-frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/gym-store-egypt/gym-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: beroo-frontend-service
spec:
  selector:
    app: beroo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
